--- a/src/main/resources/templates/cerveja/CadastroCerveja.html
+++ b/src/main/resources/templates/cerveja/CadastroCerveja.html
@@ -2,7 +2,8 @@
 <html lang="pt" xmlns="http://www.w3.org/1999/xhtml" 
     xmlns:th="http://www.thymeleaf.org"
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-    layout:decorator="'layout/LayoutPadrao'">
+    layout:decorator="'layout/LayoutPadrao'"
+    xmlns:agr="http://agr.go.gov.br">
 <body>
 <section layout:fragment="conteudo">
     
@@ -19,24 +20,24 @@
         <form method="POST" th:object="${cerveja}" class="form-vertical">
             <th:block th:include="fragments/MensagensErroValidacao"></th:block>
             <div class="row">
-                <div class="col-sm-2  form-group" th:classappend="${#fields.hasErrors('sku')} ? has-error">
+                <div class="col-sm-2  form-group" agr:classforerror="sku">
                     <label for="sku" class="control-label">SKU</label>
                     <input id="sku" type="text" class="form-control" th:field="*{sku}"/>
                 </div>                
                 
-                <div class="col-sm-10  form-group" th:classappend="${#fields.hasErrors('nome')} ? has-error">
+                <div class="col-sm-10  form-group" agr:classforerror="nome">
                     <label for="nome" class="control-label">Nome</label>
                     <input id="nome" type="text" class="form-control" th:field="*{nome}"/>
                 </div>
             </div>
 
-            <div class="form-group" th:classappend="${#fields.hasErrors('descricao')} ? has-error">
+            <div class="form-group" agr:classforerror="descricao">
                 <label for="descricao" class="control-label">Descrição</label>
                 <textarea id="descricao" rows="3" class="form-control"  th:field="*{descricao}" ></textarea>
             </div>
 
             <div class="row">
-                <div class="col-sm-3  form-group" th:classappend="${#fields.hasErrors('estilo')} ? has-error">
+                <div class="col-sm-3  form-group" agr:classforerror="estilo">
                     <label for="estilo" class="control-label">Estilo</label>
                     <div class="bw-field-action">
 	                    <select id="estilo" class="form-control" th:field="*{estilo}">
@@ -51,7 +52,7 @@
                     </div>
                 </div>
                 
-                <div class="col-sm-3  form-group" th:classappend="${#fields.hasErrors('sabor')} ? has-error">
+                <div class="col-sm-3  form-group" agr:classforerror="sabor">
                     <label for="sabor" class="control-label">Sabor</label>
                     <select id="sabor" class="form-control" th:field="*{sabor}">
                         <option value="">Selecione o sabor</option>
@@ -59,7 +60,7 @@
                     </select>
                 </div>
                 
-                <div class="col-sm-3  form-group" th:classappend="${#fields.hasErrors('*{teorAlcoolico}')} ? has-error">
+                <div class="col-sm-3  form-group" agr:classforerror="teorAlcoolico">
                     <label for="teorAlcoolico" class="control-label">Teor alcoólico</label>
                     <div class="input-group">
                         <input id="teorAlcoolico" type="text" class="form-control  js-decimal" th:field="*{teorAlcoolico}"/>
@@ -67,7 +68,7 @@
                     </div>
                 </div>
                 
-                <div class="col-lg-3  col-sm-6  form-group" th:classappend="${#fields.hasErrors('*{origem}')} ? has-error">
+                <div class="col-lg-3  col-sm-6  form-group" agr:classforerror="origem">
                     <label for="origem" class="control-label">Origem</label>
                     <div>
                         <th:block th:each="origem : ${origens}">
@@ -81,7 +82,7 @@
             </div>
             
             <div class="row">
-                <div class="col-sm-3  form-group" th:classappend="${#fields.hasErrors('*{valor}')} ? has-error">
+                <div class="col-sm-3  form-group" agr:classforerror="valor">
                     <label for="valor" class="control-label">Valor</label>
                     <div class="input-group">
                         <div class="input-group-addon">R$</div>
@@ -89,7 +90,7 @@
                     </div>
                 </div>
                 
-                <div class="col-sm-3  form-group" th:classappend="${#fields.hasErrors('*{comissao}')} ? has-error">
+                <div class="col-sm-3  form-group" agr:classforerror="valor">
                     <label for="comissao" class="control-label">Comissão</label>
                     <div class="input-group">
                         <input id="comissao" type="text" class="form-control  js-decimal" th:field="*{comissao}"/>
@@ -97,7 +98,7 @@
                     </div>
                 </div>
                 
-                <div class="col-sm-3  form-group" th:classappend="${#fields.hasErrors('*{quantidadeEstoque}')} ? has-error">
+                <div class="col-sm-3  form-group" agr:classforerror="quantidadeEstoque">
                     <label for="estoque" class="control-label">Estoque</label>
                     <input id="estoque" type="text" class="form-control  js-plain" th:field="*{quantidadeEstoque}"/>
                 </div>
