--- a/src/main/resources/templates/cerveja/CadastroCerveja.html
+++ b/src/main/resources/templates/cerveja/CadastroCerveja.html
@@ -3,10 +3,17 @@
     xmlns:th="http://www.thymeleaf.org"
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
     layout:decorator="'layout/LayoutPadrao'"
-    xmlns:agr="http://agr.go.gov.br">
+    xmlns:agr="http://http://agr.go.gov.br/">
+    
+<head>
+    <title>Cadastro de cerveja</title>
+    
+    <link rel="stylesheet" th:href="@{/stylesheets/vendors/upload.min.css}"/>
+</head>
+
 <body>
 <section layout:fragment="conteudo">
-    
+
     <div class="page-header">
         <div class="container-fluid">
             <h1>
@@ -16,13 +23,15 @@
     </div>
 
     <div class="container-fluid">
-        <form method="POST" th:object="${cerveja}" class="form-vertical">
-            <agr:message/>
+
+        <form method="POST" th:object="${cerveja}" class="form-vertical  js-form-loading">
+            <brewer:message/>
+    
             <div class="row">
                 <div class="col-sm-2  form-group" agr:classforerror="sku">
                     <label for="sku" class="control-label">SKU</label>
                     <input id="sku" type="text" class="form-control" th:field="*{sku}"/>
-                </div>                
+                </div>
                 
                 <div class="col-sm-10  form-group" agr:classforerror="nome">
                     <label for="nome" class="control-label">Nome</label>
@@ -32,22 +41,23 @@
 
             <div class="form-group" agr:classforerror="descricao">
                 <label for="descricao" class="control-label">Descrição</label>
-                <textarea id="descricao" rows="3" class="form-control"  th:field="*{descricao}" ></textarea>
+                <textarea id="descricao" rows="3" class="form-control" th:field="*{descricao}"></textarea>
             </div>
 
             <div class="row">
                 <div class="col-sm-3  form-group" agr:classforerror="estilo">
                     <label for="estilo" class="control-label">Estilo</label>
                     <div class="bw-field-action">
-	                    <select id="estilo" class="form-control" th:field="*{estilo}">
-	                        <option value="">Selecione o estilo</option>
-	                        <option th:each="estilo : ${estilos}" th:value="${estilo.codigo}" th:text="${estilo.nome}"></option>
-	                    </select>
-	                    <div class="bw-field-action__icon">
-	                       <a href="#" data-toggle="modal" data-target="#modalCadastroRapidoEstilo">
-	                           <i class="glyphicon glyphicon-plus-sign bw-glyphicon-large"></i>
-	                       </a>
-	                    </div>
+                        <select id="estilo" class="form-control" th:field="*{estilo}">
+                            <option value="">Selecione o estilo</option>
+                            <option th:each="estilo : ${estilos}" th:value="${estilo.codigo}" th:text="${estilo.nome}">Pale lager</option>
+                        </select>
+                        
+                        <div class="bw-field-action__icon">
+                            <a href="#" data-toggle="modal" data-target="#modalCadastroRapidoEstilo">
+                                <i class="glyphicon  glyphicon-plus-sign  bw-glyphicon-large"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 
@@ -55,7 +65,7 @@
                     <label for="sabor" class="control-label">Sabor</label>
                     <select id="sabor" class="form-control" th:field="*{sabor}">
                         <option value="">Selecione o sabor</option>
-                        <option th:each="sabor : ${sabores}" th:value="${sabor}" th:text="${sabor.descricao}"></option>
+                        <option th:each="sabor : ${sabores}" th:value="${sabor}" th:text="${sabor.descricao}">Adocicada</option>
                     </select>
                 </div>
                 
@@ -71,10 +81,10 @@
                     <label for="origem" class="control-label">Origem</label>
                     <div>
                         <th:block th:each="origem : ${origens}">
-	                        <div class="radio  radio-inline">
-	                            <input th:id="|id_${origem}|" type="radio" th:value="${origem}" th:field="*{origem}"> 
-	                            <label th:for="|id_${origem}|" th:text="${origem.descricao}"></label>
-	                        </div>
+                            <div class="radio  radio-inline">
+                                <input th:id="|id_${origem}|" type="radio" th:value="${origem}" th:field="*{origem}"> 
+                                <label th:for="|id_${origem}|" th:text="${origem.descricao}">Nacional</label>
+                            </div>
                         </th:block>
                     </div>
                 </div>
@@ -89,7 +99,7 @@
                     </div>
                 </div>
                 
-                <div class="col-sm-3  form-group" agr:classforerror="valor">
+                <div class="col-sm-3  form-group" agr:classforerror="comissao">
                     <label for="comissao" class="control-label">Comissão</label>
                     <div class="input-group">
                         <input id="comissao" type="text" class="form-control  js-decimal" th:field="*{comissao}"/>
@@ -103,16 +113,48 @@
                 </div>
             </div>
             
+            <div class="row">
+                <div class="form-group  col-sm-12">
+                    <label class="control-label">Foto</label>
+                    
+                    <div id="upload-drop" class="bw-upload">
+                        <i class="glyphicon  glyphicon-cloud-upload"></i>
+                        <span>Arraste a foto aqui ou </span>
+                        <a class="bw-upload-form-file">selecione <input id="upload-select" type="file" accept=".jpg,.jpeg,.png"/></a>
+                    </div>
+                </div>
+            </div>
+            
             <div class="form-group">
                 <button class="btn  btn-primary" type="submit">Salvar</button>
             </div>
     
         </form>
     </div>
+    
     <div th:replace="estilo/CadastroRapidoEstilo :: modal"></div>
 </section>
+
 <th:block layout:fragment="javascript-extra">
-    <script th:src="@{/javascripts/estilo.cadastro-rapido.js}" ></script>
+    <script th:src="@{/javascripts/estilo.cadastro-rapido.js}"></script>
+    <script th:src="@{/javascripts/vendors/uikit.min.js}"></script>
+    <script th:src="@{/javascripts/vendors/upload.min.js}"></script>
+    
+    <script>
+    $(function() {
+        var settings = {
+                type: 'json',
+                filelimit: 1,
+                allow: '*.(jpg|jpeg|png)',
+                action: '/brewer/fotos'
+        };
+        
+        UIkit.uploadSelect($('#upload-select'), settings);
+        UIkit.uploadDrop($('#upload-drop'), settings);
+    });
+    </script>
+    
 </th:block>
+    
 </body>
 </html>
