--- a/src/main/resources/templates/cerveja/CadastroCerveja.html
+++ b/src/main/resources/templates/cerveja/CadastroCerveja.html
@@ -3,7 +3,7 @@
     xmlns:th="http://www.thymeleaf.org"
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
     layout:decorator="'layout/LayoutPadrao'"
-    xmlns:agr="http://http://agr.go.gov.br/">
+    xmlns:agr="http://agr.go.gov.br">
     
 <head>
     <title>Cadastro de cerveja</title>
@@ -13,39 +13,46 @@
 
 <body>
 <section layout:fragment="conteudo">
-
-    <div class="page-header">
-        <div class="container-fluid">
-            <h1>
-                Cadastro de cerveja
-            </h1>
-        </div>
-    </div>
+	<div class="container-fluid">
+	    <div class="row">
+	        <div class="col-sm-10">
+	            <h1>Cadastro Cerveja</h1>
+	        </div>
+	        
+	        <div class="col-sm-2">
+	            <div class="aw-page-header-controls">
+	                <a class="btn  btn-default" th:href="@{/cervejas/}">
+	                    <i class="glyphicon  glyphicon-search"></i> <span class="hidden-xs  hidden-sm">Pesquisar</span>
+	                </a>
+	            </div>
+	        </div>
+	    </div>
+	</div>
 
     <div class="container-fluid">
 
         <form method="POST" th:object="${cerveja}" class="form-vertical  js-form-loading">
-            <brewer:message/>
+            <agr:message/>
     
             <div class="row">
-                <div class="col-sm-2  form-group" agr:classforerror="sku">
+                <div class="col-sm-2  form-group agr-required" agr:classforerror="sku">
                     <label for="sku" class="control-label">SKU</label>
                     <input id="sku" type="text" class="form-control" th:field="*{sku}"/>
                 </div>
                 
-                <div class="col-sm-10  form-group" agr:classforerror="nome">
+                <div class="col-sm-10  form-group agr-required" agr:classforerror="nome">
                     <label for="nome" class="control-label">Nome</label>
                     <input id="nome" type="text" class="form-control" th:field="*{nome}"/>
                 </div>
             </div>
 
-            <div class="form-group" agr:classforerror="descricao">
+            <div class="form-group agr-required" agr:classforerror="descricao">
                 <label for="descricao" class="control-label">Descrição</label>
                 <textarea id="descricao" rows="3" class="form-control" th:field="*{descricao}"></textarea>
             </div>
 
             <div class="row">
-                <div class="col-sm-3  form-group" agr:classforerror="estilo">
+                <div class="col-sm-3  form-group agr-required" agr:classforerror="estilo">
                     <label for="estilo" class="control-label">Estilo</label>
                     <div class="bw-field-action">
                         <select id="estilo" class="form-control" th:field="*{estilo}">
@@ -61,7 +68,7 @@
                     </div>
                 </div>
                 
-                <div class="col-sm-3  form-group" agr:classforerror="sabor">
+                <div class="col-sm-3  form-group agr-required" agr:classforerror="sabor">
                     <label for="sabor" class="control-label">Sabor</label>
                     <select id="sabor" class="form-control" th:field="*{sabor}">
                         <option value="">Selecione o sabor</option>
@@ -69,7 +76,7 @@
                     </select>
                 </div>
                 
-                <div class="col-sm-3  form-group" agr:classforerror="teorAlcoolico">
+                <div class="col-sm-3  form-group agr-required" agr:classforerror="teorAlcoolico">
                     <label for="teorAlcoolico" class="control-label">Teor alcoólico</label>
                     <div class="input-group">
                         <input id="teorAlcoolico" type="text" class="form-control  js-decimal" th:field="*{teorAlcoolico}"/>
@@ -77,7 +84,7 @@
                     </div>
                 </div>
                 
-                <div class="col-lg-3  col-sm-6  form-group" agr:classforerror="origem">
+                <div class="col-lg-3  col-sm-6  form-group agr-required" agr:classforerror="origem">
                     <label for="origem" class="control-label">Origem</label>
                     <div>
                         <th:block th:each="origem : ${origens}">
@@ -91,7 +98,7 @@
             </div>
             
             <div class="row">
-                <div class="col-sm-3  form-group" agr:classforerror="valor">
+                <div class="col-sm-3  form-group agr-required" agr:classforerror="valor">
                     <label for="valor" class="control-label">Valor</label>
                     <div class="input-group">
                         <div class="input-group-addon">R$</div>
@@ -99,7 +106,7 @@
                     </div>
                 </div>
                 
-                <div class="col-sm-3  form-group" agr:classforerror="comissao">
+                <div class="col-sm-3  form-group agr-required" agr:classforerror="comissao">
                     <label for="comissao" class="control-label">Comissão</label>
                     <div class="input-group">
                         <input id="comissao" type="text" class="form-control  js-decimal" th:field="*{comissao}"/>
@@ -107,7 +114,7 @@
                     </div>
                 </div>
                 
-                <div class="col-sm-3  form-group" agr:classforerror="quantidadeEstoque">
+                <div class="col-sm-3  form-group agr-required" agr:classforerror="quantidadeEstoque">
                     <label for="estoque" class="control-label">Estoque</label>
                     <input id="estoque" type="text" class="form-control  js-plain" th:field="*{quantidadeEstoque}"/>
                 </div>
@@ -115,13 +122,19 @@
             
             <div class="row">
                 <div class="form-group  col-sm-12">
+                    <input type="hidden" th:field="*{foto}">
+                    <input type="hidden" th:field="*{contentType}">
+                
                     <label class="control-label">Foto</label>
                     
-                    <div id="upload-drop" class="bw-upload">
-                        <i class="glyphicon  glyphicon-cloud-upload"></i>
-                        <span>Arraste a foto aqui ou </span>
-                        <a class="bw-upload-form-file">selecione <input id="upload-select" type="file" accept=".jpg,.jpeg,.png"/></a>
+                    <div class="js-container-foto-cerveja" th:attr="data-url-fotos=@{/fotos}">
+	                    <div id="upload-drop" class="bw-upload">
+	                        <i class="glyphicon  glyphicon-cloud-upload"></i>
+	                        <span>Arraste a foto aqui ou </span>
+	                        <a class="bw-upload-form-file">selecione <input id="upload-select" type="file" accept=".jpg,.jpeg,.png"/></a>
+	                    </div>
                     </div>
+                    
                 </div>
             </div>
             
@@ -133,25 +146,53 @@
     </div>
     
     <div th:replace="estilo/CadastroRapidoEstilo :: modal"></div>
+    <th:block th:replace="hbs/FotoCerveja"></th:block>
 </section>
 
 <th:block layout:fragment="javascript-extra">
     <script th:src="@{/javascripts/estilo.cadastro-rapido.js}"></script>
     <script th:src="@{/javascripts/vendors/uikit.min.js}"></script>
     <script th:src="@{/javascripts/vendors/upload.min.js}"></script>
+    <script th:src="@{/javascripts/vendors/handlebars.min.js}"></script>
+    <script th:src="@{/javascripts/cerveja.upload-foto.js}"></script>
     
     <script>
-    $(function() {
+   /* $(function() {
         var settings = {
                 type: 'json',
                 filelimit: 1,
                 allow: '*.(jpg|jpeg|png)',
-                action: '/brewer/fotos'
+                action: '/brewer/fotos',
+                complete: function(resposta) {
+                    var inputNomeFoto = $('input[name=foto]');
+                    var inputContentType = $('input[name=contentType]');
+                    
+                    var htmlFotoCervejaTemplate = $('#foto-cerveja').html();
+                    var template = Handlebars.compile(htmlFotoCervejaTemplate);
+                    var htmlFotoCerveja = template({nomeFoto: resposta.nome});
+                    
+                    var containerFotoCerveja = $('.js-container-foto-cerveja');
+                    
+                    var uploadDrop = $('#upload-drop');
+                    
+                    inputNomeFoto.val(resposta.nome);
+                    inputContentType.val(resposta.contentType);
+                    
+                    uploadDrop.addClass('hidden');
+                    containerFotoCerveja.append(htmlFotoCerveja);
+                    
+                    $('.js-remove-foto').on('click', function() {
+                        $('.js-foto-cerveja').remove();
+                        uploadDrop.removeClass('hidden');
+                        inputNomeFoto.val('');
+                        inputContentType.val('');
+                    });
+                }
         };
         
         UIkit.uploadSelect($('#upload-select'), settings);
         UIkit.uploadDrop($('#upload-drop'), settings);
-    });
+    });*/
     </script>
     
 </th:block>
