Paginação com ordenação em cervejas e estilos

--- a/src/main/resources/templates/cerveja/PesquisaCervejas.html
+++ b/src/main/resources/templates/cerveja/PesquisaCervejas.html
@@ -2,7 +2,7 @@
 <html lang="pt" xmlns="http://www.w3.org/1999/xhtml" 
     xmlns:th="http://www.thymeleaf.org"
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-    layout:decorator="'layout/LayoutPadrao'"
+    layout:decorator="layout/LayoutPadrao"
     xmlns:agr="http://agr.go.gov.br">
     
 <head>
@@ -96,8 +96,18 @@
                 <thead>
                     <tr>
                         <th class="table-cervejas-col-foto"></th>
-                        <th class="table-cervejas-col-sku">SKU</th>
-                        <th class="table-cervejas-col-nome">Nome</th>
+                        <th class="table-cervejas-col-sku">
+                        <agr:order page="${pagina}" field="sku" text="SKU"/>
+                        <!-- 
+                            <th:block th:replace="fragments/Ordencacao :: order (${pagina}, 'sku', 'SKU')"></th:block>
+                         -->
+                        </th>
+                        <th class="table-cervejas-col-sku">
+                        <agr:order page="${pagina}" field="nome" text="Nome"/>
+                        <!-- 
+                            <th:block th:replace="fragments/Ordencacao :: order (${pagina}, 'nome', 'Nome')"></th:block>
+                         -->
+                        </th>
                         <th class="table-cervejas-col-estilo">Estilo</th>
                         <th class="table-cervejas-col-origem">Origem</th>
                         <th class="table-cervejas-col-valor">Valor</th>
@@ -106,7 +116,7 @@
                 </thead>
                 
                 <tbody>
-                    <tr th:each="cerveja : ${cervejas}">
+                    <tr th:each="cerveja : ${pagina.conteudo}">
                         <td class="text-center">
                             <img th:src="@{/fotos/thumbnail.{foto}(foto=${cerveja.fotoOuMock})}" class="img-responsive"/>
                         </td>
@@ -124,12 +134,32 @@
                             </a>
                         </td>
                     </tr>
-                    <tr th:if="${#lists.isEmpty(cervejas)}">
+                    <tr th:if="${pagina.vazia}">
                         <td colspan="7">Nenhuma cerveja encontrada</td>
                     </tr>
                 </tbody>
             </table>
         </div>
+        
+        <div class="col-sm-12  text-center" th:if="${not pagina.vazia}">
+            <nav>
+                <ul class="pagination  pagination-sm" th:with="paginaAtual=${pagina.atual}">
+                    <li th:class="${pagina.primeira} ? disabled">
+                        <a th:href="${pagina.urlParaPagina(paginaAtual - 1)}" th:remove="${pagina.primeira} ? tag"><span>&laquo;</span></a>
+                    </li>
+                    <th:block th:each="p : ${#numbers.sequence(1, pagina.total)}" 
+                        th:with="numeroPagina=${p - 1}">
+	                    <li th:class="${paginaAtual == numeroPagina} ? active">
+	                        <a th:href="${pagina.urlParaPagina(numeroPagina)}">[[${p}]]</a>
+	                    </li>
+                    </th:block>
+                    <li th:class="${pagina.ultima} ? disabled">
+                        <a th:href="${pagina.urlParaPagina(paginaAtual + 1)}" th:remove="${pagina.ultima} ? tag"><span>&raquo;</span></a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        
     </div>
 
 </section>
