Enum Tipo Pessoa

--- a/src/main/resources/templates/cliente/CadastroCliente.html
+++ b/src/main/resources/templates/cliente/CadastroCliente.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
     xmlns:th="http://www.thymeleaf.org"
+    xmlns:data="http://www.thymeleaf.org/extras/data"
     layout:decorator="'layout/LayoutPadrao'">
 
 <head>
@@ -30,28 +31,32 @@
             <div class="row">
                 <div class="form-group  col-sm-4">
                     <label>Tipo pessoa</label> 
-                    <div>
+                    <th:block th:each="tipoPessoa : ${tiposPessoa}" >
+                    <!-- 
+                        Forma sem extras-data-attribute
                         <div class="radio  radio-inline">
-                            <input type="radio" name="tipoPessoa"> 
-                            <label>Física</label>
-                        </div>
+                            <input type="radio" th:id="|id_${tipoPessoa}|" class="js-radio-tipo-pessoa" name="tipoPessoa" 
+                             th:attr="data-documento=${tipoPessoa.documento}, data-mascara=${tipoPessoa.mascara}"> 
+                            <label class="control-label" th:id="|id_$(tipoPessoa)|" th:text="${tipoPessoa.descricao}"></label>
+                        </div>                    
+                     -->
                         <div class="radio  radio-inline">
-                            <input type="radio" name="tipoPessoa"> 
-                            <label>Juridica</label>
-                        </div>
-                    </div>
+                            <input type="radio" th:id="|id_${tipoPessoa}|" class="js-radio-tipo-pessoa" name="tipoPessoa" 
+                             data:documento="${tipoPessoa.documento}" data:mascara="${tipoPessoa.mascara}"> 
+                            <label class="control-label" th:id="|id_$(tipoPessoa)|" th:text="${tipoPessoa.descricao}"></label>
+                        </div>                       
+                    </th:block>
                 </div>
-                
                 <div class="form-group  col-sm-8" >
                     <label for="cpfOuCnpj">CPF/CNPJ</label>
-                    <input type="text" class="form-control" id="cpfOuCnpj"/>
+                    <input type="text" class="form-control" id="cpfOuCnpj" disabled/>
                 </div>
             </div>
             
             <div class="row">
                 <div class="form-group  col-sm-4">
                     <label for="telefone">Telefone</label>
-                    <input type="text" class="form-control" id="telefone"/>
+                    <input type="text" class="form-control js-phone-number" id="telefone"/>
                 </div>
                 
                 <div class="form-group  col-sm-8">
@@ -80,7 +85,7 @@
             <div class="row">
                 <div class="form-group  col-sm-4">
                     <label for="cep">CEP</label>
-                    <input type="text" class="form-control" id="cep"/>
+                    <input type="text" class="form-control js-cep" id="cep"/>
                 </div>
                 
                 <div class="form-group  col-sm-4">
@@ -98,9 +103,13 @@
                 </div>
             </div>
             
-            <button type="submit" class="btn  btn-primary">Salvar</button>              
+            <button id="btnSalvar" type="submit" class="btn  btn-primary">Salvar</button> 
+            <button id="btnTeste" type="button" class="btn  btn-primary" onclick="testeBtn();">Teste</button>                
         </form>
     </div>
 </section>
+<th:block layout:fragment="javascript-extra">
+    <script th:src="@{/javascripts/cliente.mascara-cpf-cnpj.js}"></script>
+</th:block>
 
 </html>
