--- a/src/main/resources/templates/cliente/CadastroCliente.html
+++ b/src/main/resources/templates/cliente/CadastroCliente.html
@@ -3,7 +3,7 @@
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
     xmlns:th="http://www.thymeleaf.org"
     xmlns:data="http://www.thymeleaf.org/extras/data"
-    layout:decorator="'layout/LayoutPadrao'">
+    layout:decorate="~{layout/LayoutPadrao}">
 
 <head>
     <title>Cadastro de cliente</title>
@@ -91,15 +91,20 @@
                 <div class="form-group  col-sm-4">
                     <label for="estado">Estado</label>
                     <select id="estado" class="form-control">
-                        <option value="">Selecione o estado</option>
+                        <option value="">Selecione o Estado</option>
+                        <option th:each="estado : ${estados}" th:value="${estado.codigo}" 
+                            th:text="${estado.nome}"></option>
                     </select>
                 </div>
                 
                 <div class="form-group  col-sm-4">
                     <label  for="cidade">Cidade</label>
-                    <select id="cidade" class="form-control">
-                        <option value="">Selecione a cidade</option>
-                    </select>
+                    <div class="bw-field-action" >
+	                    <select id="cidade" class="form-control" data:url="@{/cidades}"></select>
+	                    <div class="bw-field-action__icon js-img-loading" style="display: none;">
+	                       <img th:src="@{/images/mini-loading.gif}">
+	                    </div>
+                    </div>
                 </div>
             </div>
             
@@ -110,6 +115,7 @@
 </section>
 <th:block layout:fragment="javascript-extra">
     <script th:src="@{/javascripts/cliente.mascara-cpf-cnpj.js}"></script>
+    <script th:src="@{/javascripts/cliente.combo-estado-cidade.js}"></script>
 </th:block>
 
 </html>
