--- a/src/main/resources/templates/cliente/CadastroCliente.html
+++ b/src/main/resources/templates/cliente/CadastroCliente.html
@@ -3,6 +3,7 @@
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
     xmlns:th="http://www.thymeleaf.org"
     xmlns:data="http://www.thymeleaf.org/extras/data"
+    xmlns:agr="http://agr.go.gov.br"
     layout:decorate="~{layout/LayoutPadrao}">
 
 <head>
@@ -20,99 +21,108 @@
     </div>
 
     <div class="container-fluid">
-        <form>
+        <form method="POST" th:object="${cliente}" th:action="@{/clientes/novo}">
+            <agr:message/>
+            
             <div class="row">
-                <div class="form-group  col-sm-12">
-                    <label for="nome">Nome</label>
-                    <input type="text" class="form-control" id="nome" autofocus="autofocus"/>
+                <div class="form-group  col-sm-12  agr-required" agr:classforerror="nome">
+                    <label for="nome" class="control-label">Nome</label>
+                    <input type="text" class="form-control" id="nome" autofocus="autofocus" th:field="*{nome}"/>
                 </div>
             </div>
             
             <div class="row">
-                <div class="form-group  col-sm-4">
-                    <label>Tipo pessoa</label> 
-                    <th:block th:each="tipoPessoa : ${tiposPessoa}" >
-                    <!-- 
-                        Forma sem extras-data-attribute
-                        <div class="radio  radio-inline">
-                            <input type="radio" th:id="|id_${tipoPessoa}|" class="js-radio-tipo-pessoa" name="tipoPessoa" 
-                             th:attr="data-documento=${tipoPessoa.documento}, data-mascara=${tipoPessoa.mascara}"> 
-                            <label class="control-label" th:id="|id_$(tipoPessoa)|" th:text="${tipoPessoa.descricao}"></label>
-                        </div>                    
-                     -->
-                        <div class="radio  radio-inline">
-                            <input type="radio" th:id="|id_${tipoPessoa}|" class="js-radio-tipo-pessoa" name="tipoPessoa" 
-                             data:documento="${tipoPessoa.documento}" data:mascara="${tipoPessoa.mascara}"> 
-                            <label class="control-label" th:id="|id_$(tipoPessoa)|" th:text="${tipoPessoa.descricao}"></label>
-                        </div>                       
-                    </th:block>
+                <div class="form-group  col-sm-4  agr-required" agr:classforerror="tipoPessoa">
+                    <label class="control-label">Tipo pessoa</label> 
+                    <div>
+                        <th:block th:each="tipoPessoa : ${tiposPessoa}">
+                            <!-- 
+                                Forma sem extras-data-attribute
+                                <div class="radio  radio-inline">
+                                    <input type="radio" th:id="|id_${tipoPessoa}|" class="js-radio-tipo-pessoa" name="tipoPessoa" 
+                                     th:attr="data-documento=${tipoPessoa.documento}, data-mascara=${tipoPessoa.mascara}"> 
+                                    <label class="control-label" th:id="|id_$(tipoPessoa)|" th:text="${tipoPessoa.descricao}"></label>
+                                </div>                    
+                             -->                        
+                            <div class="radio  radio-inline">
+                                <input type="radio" th:id="|id_${tipoPessoa}|" class="js-radio-tipo-pessoa" 
+                                    th:field="*{tipoPessoa}" th:value="${tipoPessoa}" 
+                                    data:documento="${tipoPessoa.documento}" data:mascara="${tipoPessoa.mascara}"> 
+                                <label class="control-label" th:for="|id_${tipoPessoa}|" th:text="${tipoPessoa.descricao}">Física</label>
+                            </div>
+                        </th:block>
+                    </div>
                 </div>
-                <div class="form-group  col-sm-8" >
-                    <label for="cpfOuCnpj">CPF/CNPJ</label>
-                    <input type="text" class="form-control" id="cpfOuCnpj" disabled/>
+                
+                <div class="form-group  col-sm-8  agr-required" agr:classforerror="cpfOuCnpj">
+                    <label for="cpfOuCnpj" class="control-label">CPF/CNPJ</label>
+                    <input type="text" class="form-control" id="cpfOuCnpj" th:field="*{cpfOuCnpj}" disabled/>
                 </div>
             </div>
             
             <div class="row">
                 <div class="form-group  col-sm-4">
                     <label for="telefone">Telefone</label>
-                    <input type="text" class="form-control js-phone-number" id="telefone"/>
+                    <input type="text" class="form-control  js-phone-number" id="telefone" th:field="*{telefone}"/>
                 </div>
                 
-                <div class="form-group  col-sm-8">
-                    <label for="email">E-mail</label>
-                    <input type="text" class="form-control" id="email"/>
+                <div class="form-group  col-sm-8" agr:classforerror="email">
+                    <label for="email" class="control-label">E-mail</label>
+                    <input type="text" class="form-control" id="email" th:field="*{email}"/>
                 </div>
             </div>
             
             <div class="row">
                 <div class="form-group  col-sm-4">
                     <label for="logradouro">Logradouro</label>
-                    <input type="text" class="form-control" id="logradouro"/>
+                    <input type="text" class="form-control" id="logradouro" th:field="*{endereco.logradouro}"/>
                 </div>
                 
                 <div class="form-group  col-sm-4">
                     <label for="numero">Número</label>
-                    <input type="text" class="form-control" id="numero"/>
+                    <input type="text" class="form-control" id="numero" th:field="*{endereco.numero}"/>
                 </div>
                 
                 <div class="form-group  col-sm-4">
                     <label for="complemento">Complemento</label>
-                    <input type="text" class="form-control" id="complemento"/>
+                    <input type="text" class="form-control" id="complemento" th:field="*{endereco.complemento}"/>
                 </div>
             </div>
             
             <div class="row">
                 <div class="form-group  col-sm-4">
                     <label for="cep">CEP</label>
-                    <input type="text" class="form-control js-cep" id="cep"/>
+                    <input type="text" class="form-control  js-cep" id="cep" th:field="*{endereco.cep}"/>
                 </div>
                 
-                <div class="form-group  col-sm-4">
+                <div class="form-group  col-sm-4 agr-required">
                     <label for="estado">Estado</label>
-                    <select id="estado" class="form-control">
-                        <option value="">Selecione o Estado</option>
-                        <option th:each="estado : ${estados}" th:value="${estado.codigo}" 
-                            th:text="${estado.nome}"></option>
+                    <select id="estado" class="form-control" th:field="*{endereco.estado}">
+                        <option value="">Selecione o estado</option>
+                        <option th:each="estado : ${estados}" th:value="${estado.codigo}" th:text="${estado.nome}"></option>
                     </select>
                 </div>
                 
-                <div class="form-group  col-sm-4">
-                    <label  for="cidade">Cidade</label>
-                    <div class="bw-field-action" >
-	                    <select id="cidade" class="form-control" data:url="@{/cidades}"></select>
-	                    <div class="bw-field-action__icon js-img-loading" style="display: none;">
-	                       <img th:src="@{/images/mini-loading.gif}">
-	                    </div>
+                <div class="form-group  col-sm-4 agr-required">
+                    <label  for="cidade" class="control-label">Cidade</label>
+                    <div class="bw-field-action">
+                        <input type="hidden" id="inputHiddenCidadeSelecionada" th:value="*{endereco.cidade} != null ? *{endereco.cidade.codigo}"/>
+                        <select id="cidade" class="form-control" data:url="@{/cidades}" th:field="*{endereco.cidade}">
+                        </select>
+                        
+                        <div class="bw-field-action__icon  js-img-loading" style="display: none">
+                            <img th:src="@{/images/mini-loading.gif}"/>
+                        </div>
                     </div>
                 </div>
             </div>
             
-            <button id="btnSalvar" type="submit" class="btn  btn-primary">Salvar</button> 
-            <button id="btnTeste" type="button" class="btn  btn-primary" onclick="testeBtn();">Teste</button>                
+            <button type="submit" class="btn  btn-primary">Salvar</button>   
+            <button id="btnTeste" type="button" class="btn  btn-primary" onclick="testeBtn();">Teste</button>               
         </form>
     </div>
 </section>
+
 <th:block layout:fragment="javascript-extra">
     <script th:src="@{/javascripts/cliente.mascara-cpf-cnpj.js}"></script>
     <script th:src="@{/javascripts/cliente.combo-estado-cidade.js}"></script>
