--- a/src/main/resources/static/stylesheets/brewer.css
+++ b/src/main/resources/static/stylesheets/brewer.css
@@ -92,3 +92,33 @@
 .table-cervejas-col-acoes {
     width: 80px;
 }
+
+/* Colunas - Pesquisa de Estilos */
+.table-estilos-col-codigo {
+    width: 80px;
+}
+
+/* Colunas - Pesquisa de Clientes */
+.table-clientes-col-nome {
+    
+}
+
+.table-clientes-col-tipo-pessoa {
+    width: 120px;
+    text-align: center;
+}
+
+.table-clientes-col-cpf-cnpj {
+    width: 140px;
+    text-align: right;
+}
+
+.table-clientes-col-telefone {
+    width: 140px;
+    text-align: right;
+}
+
+.table-clientes-col-cidade-estado {
+    width: 140px;
+    text-align: right;
+}
