--- a/src/main/resources/templates/cerveja/PesquisaCervejas.html
+++ b/src/main/resources/templates/cerveja/PesquisaCervejas.html
@@ -2,7 +2,7 @@
 <html lang="pt" xmlns="http://www.w3.org/1999/xhtml" 
     xmlns:th="http://www.thymeleaf.org"
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-    layout:decorator="layout/LayoutPadrao"
+    layout:decorate="~{layout/LayoutPadrao}"
     xmlns:agr="http://agr.go.gov.br">
     
 <head>
@@ -126,7 +126,8 @@
                         <td th:text="${cerveja.origem.descricao}">Internacional</td>
                         <td class="text-right" th:text="|R$ ${cerveja.valor}|">R$ 8.00</td>
                         <td class="text-center">
-                            <a class="btn  btn-link  btn-xs" title="Editar"> 
+                            <a class="btn  btn-link  btn-xs  js-tooltip" title="Editar" 
+                                    th:href="@{/cervejas/{codigo}(codigo=${cerveja.codigo})}"> 
                                 <i class="glyphicon glyphicon-pencil"></i>
                             </a>
                             <a class="btn  btn-link  btn-xs" title="Excluir">
