--- a/src/main/resources/templates/cidade/CadastroCidade.html
+++ b/src/main/resources/templates/cidade/CadastroCidade.html
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:th="http://www.thymeleaf.org"
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-    layout:decorator="'layout/LayoutPadrao'">
+    layout:decorate="~{layout/LayoutPadrao}"
+    xmlns:agr="http://agr.go.gov.br">
 
 <head>
     <title>Cadastro de cidade</title>
@@ -10,27 +11,38 @@
 
 <section layout:fragment="conteudo">
 
-    <div class="page-header">
-        <div class="container-fluid">
-            <h1>
-                Cadastro de cidade
-            </h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-10">
+                <h1>Cadastro de Cidade</h1>
+            </div>
+            
+            <div class="col-sm-2">
+                <div class="aw-page-header-controls">
+                    <a class="btn  btn-default" th:href="@{/cidades/}">
+                        <i class="glyphicon  glyphicon-search"></i> <span class="hidden-xs  hidden-sm">Pesquisar</span>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
     
     <div class="container-fluid">
-        <form>
+        <form method="POST" th:object="${cidade}" th:action="@{/cidades/nova}">
+            <agr:message/>
+            
             <div class="row">
-                <div class="form-group  col-sm-4" >
-                    <label for="estado" >Estado</label>
-                    <select id="estado" class="form-control">
+                <div class="form-group  col-sm-4  bw-required" agr:classforerror="estado">
+                    <label for="estado" class="control-label">Estado</label>
+                    <select id="estado" class="form-control" th:field="*{estado}">
                         <option value="">Selecione o estado</option>
+                        <option th:each="estado : ${estados}" th:value="${estado.codigo}" th:text="${estado.nome}">São Paulo</option>
                     </select>
                 </div>
                 
-                <div class="form-group  col-sm-8">
-                    <label for="nome">Nome</label>
-                    <input type="text" class="form-control" id="nome" autofocus="autofocus"/>
+                <div class="form-group  col-sm-8  bw-required" agr:classforerror="nome">
+                    <label for="nome" class="control-label">Nome</label>
+                    <input type="text" class="form-control" id="nome" th:field="*{nome}"/>
                 </div>
             </div>
             
