--- a/src/main/resources/templates/cliente/CadastroCliente.html
+++ b/src/main/resources/templates/cliente/CadastroCliente.html
@@ -12,11 +12,19 @@
 
 <section layout:fragment="conteudo">
 
-    <div class="page-header">
-        <div class="container-fluid">
-            <h1>
-                Cadastro de cliente
-            </h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-10">
+                <h1>Cadastro de Cliente</h1>
+            </div>
+            
+            <div class="col-sm-2">
+                <div class="aw-page-header-controls">
+                    <a class="btn  btn-default" th:href="@{/clientes/}">
+                        <i class="glyphicon  glyphicon-search"></i> <span class="hidden-xs  hidden-sm">Pesquisar</span>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -118,7 +126,8 @@
             </div>
             
             <button type="submit" class="btn  btn-primary">Salvar</button>   
-            <button id="btnTeste" type="button" class="btn  btn-primary" onclick="testeBtn();">Teste</button>               
+            <button id="btnTeste" type="button" class="btn  btn-primary" onclick="testeBtn();">Teste</button> 
+            <button id="btnHidden" type="button" class="btn  btn-primary hidden">Hidden</button>                
         </form>
     </div>
 </section>
