--- a/src/main/resources/templates/layout/fragments/BarraNavegacao.html
+++ b/src/main/resources/templates/layout/fragments/BarraNavegacao.html
@@ -8,7 +8,7 @@
 
     <div class="navbar-header">
         <a class="navbar-brand  hidden-xs" href="#">
-            <img alt="AlgaWorks" th:src="@{/images/logo.png}"/>
+            <img alt="AGR" th:src="@{/images/logo-agr.png}" style="height: 49px; width: 118px; margin-top: -15px"/>
         </a>
 
         <ul class="nav  navbar-nav">
