--- a/src/main/resources/templates/layout/fragments/Footer.html
+++ b/src/main/resources/templates/layout/fragments/Footer.html
@@ -3,9 +3,9 @@
     xmlns:th="http://www.thymeleaf.org"
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <body>    
-    <footer class="aw-layout-footer  js-content" th:fragment="layout-footer">
+    <footer class="navbar  navbar-fixed-bottom  navbar-default   js-content" th:fragment="layout-footer">
         <div class="container-fluid">
-            <span class="aw-footer-disclaimer">&copy; 2016 AlgaWorks. Todos os direitos reservados.</span>
+            <span class="aw-footer-disclaimer">&copy; Agência Goiana de Regulação, Controle e Fiscalização de Serviços Públicos.</span>
         </div>
     </footer>
 </body>
